# croudtech-python-gcp-otel

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml
src/croudtech_gcp_otel/: __init__.py  logging.py  telemetry.py
