[tool.poetry]
name = "croudtech-python-gcp-otel"
version = "0.1.0"
description = "OpenTelemetry configuration utilities for GCP Cloud Trace and Cloud Logging"
authors = ["CroudTech"]
readme = "README.md"
packages = [{include = "croudtech_gcp_otel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# OpenTelemetry - Core
opentelemetry-api = ">=1.21,<2.0"
opentelemetry-sdk = ">=1.21,<2.0"
opentelemetry-instrumentation = ">=0.42b0"

# OpenTelemetry - GCP Exporters
opentelemetry-exporter-gcp-trace = ">=1.6,<2.0"

# OpenTelemetry - Propagators
opentelemetry-propagator-gcp = ">=1.6,<2.0"

# OpenTelemetry - Resource detectors
opentelemetry-resourcedetector-gcp = ">=1.6.0a0,<2.0"

[tool.poetry.extras]
django = ["opentelemetry-instrumentation-django"]
requests = ["opentelemetry-instrumentation-requests"]
psycopg2 = ["opentelemetry-instrumentation-psycopg2"]
logging = ["opentelemetry-instrumentation-logging"]
all = [
    "opentelemetry-instrumentation-django",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-logging",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"

[tool.poetry.group.instrumentations]
optional = true

[tool.poetry.group.instrumentations.dependencies]
opentelemetry-instrumentation-django = ">=0.42b0"
opentelemetry-instrumentation-requests = ">=0.42b0"
opentelemetry-instrumentation-psycopg2 = ">=0.42b0"
opentelemetry-instrumentation-logging = ">=0.42b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
